--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
-<h1>Hello World!</h1>
+<h1>Marcel Perez</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
