--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
 <h1>Marcel Perez</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a class="btn btn-primary" href="#" role="button">Link</a>
+<button class="btn btn-primary" type="submit">Button</button>
+<input class="btn btn-primary" type="button" value="Input">
+<input class="btn btn-primary" type="submit" value="Submit">
+<input class="btn btn-primary" type="reset" value="Reset">
 </body>
 </html>
