--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<title>Marcel Perez</title>
 </head>
 <body>
 <h1>Marcel Perez</h1>
