--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
+            <h2>Contact</h2>
             <p>Feel free to leave us a comment on the
               <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
               on Start Bootstrap to give some feedback about this theme!</p>
@@ -109,7 +109,7 @@
               <li class="list-inline-item">
                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                  <span class="network-name">LinkedIn</span>
                 </a>
               </li>
               <li class="list-inline-item">
