--- a/index.html
+++ b/index.html
@@ -72,26 +72,25 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About</h2>
+            <p><b>Computer Engineering (B.S.)</b></p>
+              <p>California Polytechnic State University (Cal Poly), SLO, CA</p>
+            <p>Android Developer (3 years)</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>Portfolio</h2>
+          <h3>Spot</h3>
+          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
+          <p><a href="https://play.google.com/store/apps/details?id=com.marcel.spot" class="btn btn-default btn-lg">See on Google Play Store</a></p>
+          <h3>Tern</h3>
+          <p>Tern is a </p>
         </div>
       </div>
     </section>
@@ -102,14 +101,13 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
+            <p>Email: 
+              <a href="mailto:someone@yoursite.com">Marcel017@yahoo.com/a></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">LinkedIn</span>
+                  <span class="network-name">Twitter</span>
                 </a>
               </li>
               <li class="list-inline-item">
