--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
             <p><b>Computer Engineering (B.S.)</b></p>
-              <p>California Polytechnic State University (Cal Poly), SLO, CA</p>
+              <p>California Polytechnic State University (Cal Poly), San Luis Obispo, CA</p>
             <p>Android Developer (3 years)</p>
           </div>
         </div>
@@ -89,6 +89,7 @@
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
           <p><a href="https://play.google.com/store/apps/details?id=com.marcel.spot" class="btn btn-default btn-lg">See on Google Play Store</a></p>
+          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
           <h3>Tern</h3>
           <p>Tern is a </p>
         </div>
@@ -102,7 +103,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
             <p>Email: 
-              <a href="mailto:someone@yoursite.com">Marcel017@yahoo.com/a></p>
+              <a href="mailto:Marcel017@yahoo.com">Marcel017@yahoo.com</a></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
@@ -134,7 +135,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2018</p>
+        <p>Marcel Perez 2018</p>
       </div>
     </footer>
 
