--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
           <p><a href="https://play.google.com/store/apps/details?id=com.marcel.spot" class="btn btn-default btn-lg">See on Google Play Store</a></p>
-          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
           <h3>Tern</h3>
           <p>Tern is a </p>
         </div>
@@ -109,12 +109,6 @@
                 <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
