--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
               <a href="mailto:Marcel017@yahoo.com">Marcel017@yahoo.com</a></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                <a href="https://www.linkedin.com/in/marcelbperez/" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                  <span class="network-name">LinkedIn</span>
                 </a>
               </li>
               <li class="list-inline-item">
