--- a/index.html
+++ b/index.html
@@ -88,8 +88,12 @@
           <h2>Portfolio</h2>
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
-          <p><a href="https://play.google.com/store/apps/details?id=com.marcel.spot" class="btn btn-default btn-lg">See on Google Play Store</a></p>
           <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
+          <ul>
+            <li>
+              <img src="../img/spot_1" height="1000">
+            </li>
+          </ul>
           <h3>Tern</h3>
           <p>Tern is a </p>
         </div>
@@ -107,16 +111,16 @@
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/marcelbperez/" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
+                  <!-- <i class="fa fa-twitter fa-fw"></i> -->
                   <span class="network-name">LinkedIn</span>
                 </a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
                   <i class="fa fa-google-plus fa-fw"></i>
                   <span class="network-name">Google+</span>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
