--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
             <li>
               <img src="../img/spot_1" height="1000">
             </li>
+            <li>
+              <img src="../img/spot_2" height="1000">
+            </li>
+            <li>
+              <img src="../img/spot_3" height="1000">
+            </li>
+            <li>
+              <img src="../img/spot_4" height="1000">
+            </li>
           </ul>
           <h3>Tern</h3>
           <p>Tern is a </p>
