--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
           <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
           <ul>
             <li>
-              <img src="../img/spot_1.png" height="1000">
+              <img src="/img/spot_1.png" height="1000">
             </li>
             <li>
-              <img src="../img/spot_2.png" height="1000">
+              <img src="/img/spot_2.png" height="1000">
             </li>
             <li>
-              <img src="../img/spot_3.png" height="1000">
+              <img src="/img/spot_3.png" height="1000">
             </li>
             <li>
-              <img src="../img/spot_4.png" height="1000">
+              <img src="/img/spot_4.png" height="1000">
             </li>
           </ul>
           <h3>Tern</h3>
