--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
           <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
-          <ul>
+          <ul class="list-inline banner-social-buttons">
             <li>
-              <img src="/img/spot_1.png" height="1000">
+              <img src="/img/spot_1.png" height="400">
             </li>
             <li>
-              <img src="/img/spot_2.png" height="1000">
+              <img src="/img/spot_2.png" height="400">
             </li>
             <li>
-              <img src="/img/spot_3.png" height="1000">
+              <img src="/img/spot_3.png" height="400">
             </li>
             <li>
-              <img src="/img/spot_4.png" height="1000">
+              <img src="/img/spot_4.png" height="400">
             </li>
           </ul>
           <h3>Tern</h3>
