--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@
         <div class="col-lg-8 mx-auto">
           <h2>Portfolio</h2>
           <h3>Spot</h3>
-          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.</p>
+          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.
           <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
+          </p>
           <ul class="list-inline banner-social-buttons">
-            <li>
+            <li class="list-inline-item">
               <img src="/img/spot_1.png" height="400">
             </li>
-            <li>
+            <li class="list-inline-item">
               <img src="/img/spot_2.png" height="400">
             </li>
-            <li>
+            <li class="list-inline-item">
               <img src="/img/spot_3.png" height="400">
             </li>
-            <li>
+            <li class="list-inline-item">
               <img src="/img/spot_4.png" height="400">
             </li>
           </ul>
