--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="col-lg-8 mx-auto">
           <h2>Portfolio</h2>
           <h3>Spot</h3>
-          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.
-          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="200"/></a>
+          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br>
+          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="150"/></a>
           </p>
           <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">
@@ -104,6 +104,11 @@
               <img src="/img/spot_4.png" height="600">
             </li>
           </ul>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
           <h3>Tern</h3>
           <p>Tern is a </p>
         </div>
