--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio-section content-section text-center">
+    <section id="portfolio" class="content-section text-center">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-8 mx-auto portfolio-section">
           <h2>Portfolio</h2>
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br>
@@ -92,13 +92,7 @@
           </p>
           <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">
-              <img src="/img/spot_1.png" height="500">
-            </li>
-            <li class="list-inline-item">
               <img src="/img/spot_2.png" height="500">
-            </li>
-            <li class="list-inline-item">
-              <img src="/img/spot_3.png" height="500">
             </li>
             <li class="list-inline-item">
               <img src="/img/spot_4.png" height="500">
