--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Marcel Perez</h1>
-              <p class="intro-text">Developer
+              <p class="intro-text">Software Engineer
                 <br>Graphic Designer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -82,9 +82,9 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="content-section text-center">
+    <section id="portfolio" class="portfolio-section content-section text-center">
       <div class="container">
-        <div class="col-lg-8 mx-auto portfolio-section">
+        <div class="col-lg-8 mx-auto">
           <h1>Portfolio</h1>
           <h3>Spot</h3>
           <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br>
