--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h1>About</h1>
-            <p><b>Computer Engineering (B.S.)</b></p>
-              <p>California Polytechnic State University (Cal Poly), San Luis Obispo, CA</p>
+            <p><b>Computer Engineering (B.S.)</b>
+              <br>California Polytechnic State University (Cal Poly), San Luis Obispo, CA</p>
             <p>Android Developer (3 years)</p>
           </div>
         </div>
@@ -104,7 +104,15 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h3>Tern</h3>
-          <p>Tern is a </p>
+          <p>Tern is a travel application for planning places that a user may want to go to in the future. Places can be organized into collections, like songs in a playlist. Also, the user can view any collection or even all their places with markers on a map for a better visual representation. Tern is soon to be available on the Google Play Store (Android) and the App Store (iOS).</p>
+          <ul class="list-inline banner-social-buttons">
+            <li class="list-inline-item">
+              <img src="/img/tern_1.png" height="500">
+            </li>
+            <li class="list-inline-item">
+              <img src="/img/tern_2.png" height="500">
+            </li>
+          </ul>
         </div>
       </div>
     </section>
