--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>About</h1>
             <p><b>Computer Engineering (B.S.)</b>
               <br>California Polytechnic State University (Cal Poly), San Luis Obispo, CA</p>
-            <p>Android Developer (3 years)</p>
+            <p>Android Development (3 years)</p>
           </div>
         </div>
       </div>
@@ -98,6 +98,8 @@
               <img src="/img/spot_4.png" height="500">
             </li>
           </ul>
+          <br>
+          <br>
         </div>
       </div>
 
@@ -145,7 +147,7 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
