--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Marcel Perez 2018</p>
+        <p>Marcel Perez, 2018</p>
       </div>
     </footer>
 
