--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
   <head>
 
+    <link rel="icon" type="image/png" href="/img/favicon.png">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
