--- a/portfolio/spot/policy.html
+++ b/portfolio/spot/policy.html
@@ -41,7 +41,7 @@
             <h2>Information Collection and Use</h2>
             <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.<br><br>
             The app does use third party services that may collect information used to identify you.<br><br>
-            Link to privacy policy of third party service providers used by the app
+            Links to privacy policy of third party service providers used by the app:
             <ul><a href="https://www.google.com/policies/privacy/">Google Play Services</a></ul>
             <ul><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></ul>
             <ul><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></ul><br><br><br></p>
