--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p><b>Computer Engineering (B.S.)</b>
-              <br>California Polytechnic State University (Cal Poly), San Luis Obispo, CA</p>
-            <p>Android Development (3 years)</p>
+            <p>I am a software developer who specializes in Python and Java. For Python, I like to write scripts that make my daily life more efficient, and to automate mundane tasks.
+              Java was one of my main languages in college, and is what I have been developing Android with for over 3 years. Android is my main passion in programming, due
+              to the amount of creativity and design that can be put into it. As for education, I have a Computer Engineering (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
+              <p>I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies are
+                DJing, music editing, video editing, baseball, and chess.</p>
+              <br>
           </div>
         </div>
       </div>
@@ -85,42 +88,67 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio-section content-section text-center">
-      <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Portfolio</h2>
-          <h3>Spot</h3>
-          <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br><br>
-          <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="150"/></a>
-          </p>
-          <ul class="list-inline banner-social-buttons">
-            <li class="list-inline-item">
-              <img src="/img/spot_2.png" height="500">
-            </li>
-            <li class="list-inline-item">
-              <img src="/img/spot_4.png" height="500">
-            </li>
-          </ul>
-          <br>
-          <hr />
-          <br>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h3>Tern</h3>
-          <p>Tern is a travel application for planning places that a user may want to go to in the future. Places can be organized into collections, like songs in a playlist. Also, the user can view any collection or even all their places with markers on a map for a better visual representation. Tern is soon to be available on the Google Play Store (Android) and the App Store (iOS).</p>
-          <ul class="list-inline banner-social-buttons">
-            <li class="list-inline-item">
-              <img src="/img/tern_1.png" height="500">
-            </li>
-            <li class="list-inline-item">
-              <img src="/img/tern_2.png" height="500">
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
+        <h2>Portfolio</h2>
+        <!-- <p><i>Click on the arrows to cycle through each project</i></p><br> -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+            <!-- <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol> -->
+            <div class="carousel-inner" style=" width:100%; height: 800px !important;" data-interval="false">
+              <div id="spot" class="carousel-item active container">
+                  <div class="col-lg-8 mx-auto">
+                    <h3>Spot</h3>
+                    <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br><br>
+                    <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="150"/></a>
+                    </p>
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <img src="/img/spot_2.png" height="500">
+                      </li>
+                      <li class="list-inline-item">
+                        <img src="/img/spot_4.png" height="500">
+                      </li>
+                    </ul>
+                  </div>
+              </div>
+              <div id="tern" class="carousel-item container">
+                  <div class="col-lg-8 mx-auto">
+                  <h3>Tern</h3>
+                  <p>Tern is a travel application for planning places that a user may want to go to in the future. Places can be organized into collections, like songs in a playlist. Also, the user can view any collection or even all their places with markers on a map for a better visual representation. Tern is soon to be available on the Google Play Store (Android) and the App Store (iOS).</p>
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="/img/tern_1.png" height="500">
+                    </li>
+                    <li class="list-inline-item">
+                      <img src="/img/tern_2.png" class="hidden-xs .visible-sm-block hidden-sm" height="500">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div id="rest-roulette" class="carousel-item container">
+                <div class="col-lg-8 mx-auto">
+                  <h3>REST Roulette</h3>
+                  <p>A REST API server for playing roulette. Experiment with different bet types and wager amounts. Try it out at <a href="http://www.roulette.rip/">www.roulette.rip</a>.</p>
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <img src="/img/rest_roulette_1.png" class="img-fluid border border-dark" height="500">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+      </section>
 
     <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
