--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p>I am a software developer who specializes in Python and Java. For Python, I like to write scripts that make my daily life more efficient, and to automate mundane tasks.
-              Java was one of my main languages in college, and is what I have been developing Android with for over 3 years. Android is my main passion in programming, due
-              to the amount of creativity and design that can be put into it. As for education, I have a Computer Engineering (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
-              <p>I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies are
-                DJing, music editing, video editing, baseball, and chess.</p>
+            <p>I am a software developer who specializes in Python and Android. For Python, I like to write scripts that make my daily life more efficient, and to automate mundane
+              tasks. Android is my main passion in programming, due to the amount of creativity and design that can be put into it. As for education, I have a Computer Engineering
+              (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
+              <p>I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies
+                include DJing, music editing, video editing, baseball, and chess.</p>
               <br>
           </div>
         </div>
@@ -100,8 +100,11 @@
               <div id="spot" class="carousel-item active container">
                   <div class="col-lg-8 mx-auto">
                     <h3>Spot</h3>
-                    <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.<br><br>
-                    <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="150"/></a>
+                    <p>Spot is a one-tap car location saving Android application. Users can also add notes and a picture to help for later. When it comes to finding the car, a
+                      route is drawn on the map from the user's current location. If needed, the user can open Google Navigation or look at the Google Street View of the car's location.
+                      <br><br>
+                      <a href='https://play.google.com/store/apps/details?id=com.marcel.spot&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                      <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' width="150"/></a>
                     </p>
                     <ul class="list-inline">
                       <li class="list-inline-item">
@@ -116,7 +119,9 @@
               <div id="tern" class="carousel-item container">
                   <div class="col-lg-8 mx-auto">
                   <h3>Tern</h3>
-                  <p>Tern is a travel application for planning places that a user may want to go to in the future. Places can be organized into collections, like songs in a playlist. Also, the user can view any collection or even all their places with markers on a map for a better visual representation. Tern is soon to be available on the Google Play Store (Android) and the App Store (iOS).</p>
+                  <p>Tern is a travel application for planning places that a user may want to go to in the future. Places can be organized into collections, like songs in a
+                    playlist. Also, the user can view any collection or even all their places with markers on a map for a better visual representation. Tern is soon to be
+                    available on the Google Play Store (Android) and the App Store (iOS).</p>
                   <ul class="list-inline">
                     <li class="list-inline-item">
                       <img src="/img/tern_1.png" height="500">
@@ -183,7 +188,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Marcel Perez, 2019</p>
+        <p>Marcel Perez, 2020</p>
       </div>
     </footer>
 
