Update About and Email

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Marcel Perez</h1>
-              <p class="intro-text">Software Engineer
-                <br>Graphic Designer</p>
+              <p class="intro-text">Software Engineer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -75,12 +74,12 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p>I am a software developer who specializes in Python and Android. For Python, I like to write scripts that make my daily life more efficient, and to automate mundane
-              tasks. Android is my main passion in programming, due to the amount of creativity and design that can be put into it. As for education, I have a Computer Engineering
-              (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
-              <p>I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies
-                include DJing, music editing, video editing, baseball, and chess.</p>
-              <br>
+            <p>I am a software engineer who specializes in Android and Python. I enjoy the combination of design and code to deliver aesthetic user interfaces. This is why I like Android,
+              a mobile interface with many possibilities. On the side, I also like to write scripts in Python to make my daily life more efficient, and to automate mundane tasks.</p>
+            <p>I am currently at Yelp for Android development. As for education, I have a Computer Engineering (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
+            <p>Aside from programming, I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies
+              are DJing, music editing, photography, videography, baseball, and chess.</p>
+            <br>
           </div>
         </div>
       </div>
@@ -162,7 +161,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
             <p>Email: 
-              <a href="mailto:Marcel017@yahoo.com">Marcel017@yahoo.com</a></p>
+              <a href="mailto:hi@marcelbperez.com">hi@marcelbperez.com</a></p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/marcelbperez/" class="btn btn-default btn-lg">
@@ -188,7 +187,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Marcel Perez, 2020</p>
+        <p>Marcel Perez, 2021</p>
       </div>
     </footer>
 
