--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact</h2>
-            <p>Email: 
-              <a href="mailto:hi@marcelbperez.com">hi@marcelbperez.com</a></p>
+            <p>Send me an email at  
+              <a href="mailto:hi@marcelbperez.com">hi@marcelbperez.com</a>!</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/marcelbperez/" class="btn btn-default btn-lg">
