--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
             <p>I am a software engineer who specializes in Android and Python. I enjoy the combination of design and code to deliver aesthetic user interfaces. This is why I like Android,
-              a mobile interface with many possibilities. On the side, I also like to write scripts in Python to make my daily life more efficient, and to automate mundane tasks.</p>
-            <p>I am currently at Yelp for Android development. As for education, I have a Computer Engineering (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
+              a mobile interface with many possibilities. On the side, I also like to write scripts in Python to make my daily life more efficient, and to automate tasks.</p>
+            <p>I have worked at Uber and Yelp for Android development. As for education, I have a Computer Engineering (B.S.) degree from Cal Poly, San Luis Obispo, California.</p>
             <p>Aside from programming, I also enjoy graphic design. I have freelanced for a few years and create anything from t-shirts designs, flyers, and general photo edits. Some of my hobbies
               are DJing, music editing, photography, videography, baseball, and chess.</p>
             <br>
